Apply tiny polish to DevMojo